# PlaynPlug

./: .gitmodules  CMakeLists.txt  README.md
1_Gain/: Config.xml  processor.cpp
2_Panning/: Config.xml
Backend/: API.h  CMakeLists.txt
Backend/Libraries/boost/log/sinks/: async_frontend.hpp  basic_sink_backend.hpp
Backend/Libraries/boost/predef/compiler/: edg.h
Backend/Source/Data/: Data.cpp  Data.h  Properties.cpp  Properties.h  TreePropertyWrapper.h  TreeWrapper.h
Backend/Source/Gui/: EditorContent.h
Backend/Source/Gui/Components/: MenuButton.h  MenuButtonAttachment.h
Backend/Source/Gui/Sections/: SettingsSection.h
Backend/Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginParameter.h  PluginProcessor.cpp  PluginProcessor.h
Backend/Source/Utils/: Config.cpp  Config.h  FileWatcher.h  LibraryLoader.h  Macros.h
